[FIX] z-index del menu burger

--- a/frontend/src/layout/Footer/styles.module.css
+++ b/frontend/src/layout/Footer/styles.module.css
@@ -42,7 +42,7 @@ footer>.delimiterChild {
 @media all and (max-width: 415px) {
   /*Footer */
   .footer {
-    z-index: 99;
+    z-index: 50;
   }
   .icons {
     display: none;
